--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ ncurses = "5.73.0"
 bitflags = "0.3.2"
 weakjson = "0.0.7"
 rustc-serialize = "0.3.16"
+unicode-width = "0.1.3"
 log = "0.3"
 env_logger = "0.3"
