--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ bitflags = "0.3.2"
 weakjson = "0.0.7"
 rustc-serialize = "0.3.16"
 unicode-width = "0.1.3"
+vec_map = "0.3.0"
 log = "0.3"
 env_logger = "0.3"
