--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Ivan Ivaschenko <defuz@me.com>"]
 
 [dependencies]
 regex = "0.1.41"
-ncurses = "5.73.0"
+ncurses = {"version" = "5.73.0", git = "https://github.com/jeaye/ncurses-rs.git" }
 bitflags = "0.3.2"
 weakjson = "0.0.7"
 rustc-serialize = "0.3.16"
@@ -14,3 +14,6 @@ unicode-width = "0.1.3"
 vec_map = "0.3.0"
 log = "0.3"
 env_logger = "0.3"
+
+[features]
+default = ["ncurses/panel"]
