--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Ivan Ivaschenko <defuz@me.com>"]
 
 [dependencies]
 regex = "0.1.41"
-ncurses = {"version" = "5.73.0", git = "https://github.com/jeaye/ncurses-rs.git" }
+ncurses = {git = "https://github.com/defuz/ncurses-rs.git" }
 bitflags = "0.3.2"
 weakjson = "0.0.7"
 rustc-serialize = "0.3.16"
