--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,15 @@ version = "0.0.1"
 authors = ["Ivan Ivaschenko <defuz@me.com>"]
 
 [dependencies]
-regex = "0.1.41"
 ncurses = "*"
-bitflags = "0.3.2"
+bitflags = "0.3"
 weakjson = "0.0.7"
-rustc-serialize = "0.3.16"
-unicode-width = "0.1.3"
-vec_map = "0.3.0"
+rustc-serialize = "0.3"
+unicode-width = "0.1"
 log = "0.3"
 env_logger = "0.3"
 plist = "0.0.11"
+oniguruma = "0.1"
 
 [features]
 default = ["ncurses/panel"]
